--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-pymupdf
-chromadb
-sentence-transformers
-langchain
-google-generativeai
-open-clip-torch
-torch
-Pillow
+streamlit>=1.28
+pymupdf>=1.22
+chromadb>=0.3.29
+sentence-transformers>=2.2.2
+langchain>=0.1.170
+google-generativeai>=0.1.0
+open-clip-torch>=2.0.2
+torch>=2.2.0
+Pillow>=10.0
